Created Dutch translation, fixed Ukrainian translation

--- a/src/main/resources/assets/atmospheric/lang/uk_ua.json
+++ b/src/main/resources/assets/atmospheric/lang/uk_ua.json
@@ -335,7 +335,7 @@
   "effect.atmospheric.persistence": "Завзятість",
 
   "biome.atmospheric.rainforest": "Тропічний ліс",
-  "biome.atmospheric.sparse_rainforest: "Рідкісний тропічний ліс",
+  "biome.atmospheric.sparse_rainforest": "Рідкісний тропічний ліс",
   "biome.atmospheric.rainforest_basin": "Водойма тропічного лісу",
   "biome.atmospheric.sparse_rainforest_basin": "Рідкісна водойма тропічного лісу",
  
