Small Dutch improvements, food recipe changes

--- a/src/main/resources/assets/atmospheric/lang/nl_nl.json
+++ b/src/main/resources/assets/atmospheric/lang/nl_nl.json
@@ -75,8 +75,8 @@
   "block.atmospheric.passion_vine_bundle" : "Passiebloemlianenbundel",
   "block.atmospheric.water_hyacinth" : "Waterhyacint",
   "block.atmospheric.potted_water_hyacinth" : "Waterhyacint in pot",
-  "block.atmospheric.passionfruit_crate" : "Passievruchten-krat",
-  "block.atmospheric.shimmering_passionfruit_crate" : "Glinsterende passievruchten-krat",
+  "block.atmospheric.passionfruit_crate" : "Krat passievruchten",
+  "block.atmospheric.shimmering_passionfruit_crate" : "Krat glinsterende passievruchten",
   "block.atmospheric.yucca_log" : "Yuccastam",
   "block.atmospheric.yucca_wood" : "Yuccahout",
   "block.atmospheric.stripped_yucca_log" : "Gestripte yuccastam",
@@ -116,8 +116,8 @@
   "block.atmospheric.potted_yucca_flower" : "Yuccabloem in pot",
   "block.atmospheric.potted_barrel_cactus" : "Bolcactus in pot",
   "block.atmospheric.potted_gilia" : "Gilia in pot",
-  "block.atmospheric.yucca_cask" : "Yucca-ton",
-  "block.atmospheric.roasted_yucca_cask" : "Geroosterde yucca-ton",
+  "block.atmospheric.yucca_cask" : "Vat yucca's",
+  "block.atmospheric.roasted_yucca_cask" : "Vat geroosterde yucca's",
   "block.atmospheric.yucca_gateau" : "Yucca Gateau",
   "block.atmospheric.arid_sprouts" : "Droge kiemen",
   "block.atmospheric.barrel_cactus" : "Bolcactus",
@@ -304,7 +304,7 @@
   "item.atmospheric.yucca_boat" : "Yuccahouten boot",
   "item.atmospheric.yucca_furnace_boat" : "Yuccahouten boot met oven",
   "item.atmospheric.yucca_chest_boat" : "Yuccahouten boot met kist",
-  "item.atmospheric.large_yucca_boat" : "Grote Yuccahouten boot",
+  "item.atmospheric.large_yucca_boat" : "Grote yuccahouten boot",
   "item.atmospheric.kousa_boat" : "Kornoeljehouten boot",
   "item.atmospheric.kousa_furnace_boat" : "Kornoeljehouten boot met oven",
   "item.atmospheric.kousa_chest_boat" : "Kornoeljehouten boot met kist",
@@ -319,7 +319,7 @@
   "item.atmospheric.large_grimwood_boat" : "Grote duisterhouten boot",
   "item.atmospheric.passionfruit" : "Passievrucht",
   "item.atmospheric.shimmering_passionfruit" : "Glinsterende passievrucht",
-  "item.atmospheric.passionfruit_tart" : "Passievruchttaart",
+  "item.atmospheric.passionfruit_tart" : "Passievruchttaartje",
   "item.atmospheric.passionfruit_sorbet" : "Passievruchtsorbet",
   "item.atmospheric.passion_vine_coil" : "Opgerolde passiebloemlianen",
   "item.atmospheric.yucca_fruit" : "Yuccavrucht",
